--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,16 @@ wandb
 
 # pretrained models
 pretrained
+
+.vscode
+*.pyc
+*.zip
+splits
+images/
+*.pth
+*.pkl
+train/
+val/
+wandb/
+tmp*
+__pycache__
